--- a/propiedades_alquiler.html
+++ b/propiedades_alquiler.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
-      <a class="navbar-brand" href="/">Inmobiliaria ADL</a>
+      <a class="navbar-brand" href="./index.html">Inmobiliaria ADL</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
       <h2>Propiedades en alquiler</h2>
       <div class="row">
       </div>
-      <a href="/" class="btn btn-dark">Volver al inicio</a>
+      <a href="./index.html" class="btn btn-dark">Volver al inicio</a>
     </section>
   </div>
   <footer class="py-3 my-4">
